{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 188,
  "lineage": "45629754-5ef7-2234-59f6-330d39ba9a92",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0293081593d8d21fb",
            "domain": "vpc",
            "id": "eipalloc-0293081593d8d21fb",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-13-115-68-208.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.115.68.208",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:282683106297:internet-gateway/igw-0acba5e6b57ff502a",
            "id": "igw-0acba5e6b57ff502a",
            "owner_id": "282683106297",
            "tags": {
              "Environment": "dev",
              "Name": "igw",
              "Owner": "Kamesh",
              "Project": "VR"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "igw",
              "Owner": "Kamesh",
              "Project": "VR"
            },
            "vpc_id": "vpc-02b836eceaf037348"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0293081593d8d21fb",
            "association_id": "eipassoc-03218a1ec3a3941e1",
            "connectivity_type": "public",
            "id": "nat-05e87b9b2c6eeef00",
            "network_interface_id": "eni-025d91a8f14994756",
            "private_ip": "10.0.1.170",
            "public_ip": "13.115.68.208",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-082c11d3a9a81a786",
            "tags": {
              "Environment": "dev",
              "Name": "natgw",
              "Owner": "Kamesh",
              "Project": "VR"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "natgw",
              "Owner": "Kamesh",
              "Project": "VR"
            }
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_subnet.public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:282683106297:route-table/rtb-014112bcf9db318a3",
            "id": "rtb-014112bcf9db318a3",
            "owner_id": "282683106297",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0acba5e6b57ff502a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "public-rtb",
              "Owner": "Kamesh",
              "Project": "VR"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-rtb",
              "Owner": "Kamesh",
              "Project": "VR"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b836eceaf037348"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:282683106297:route-table/rtb-0b5bf245d2867892b",
            "id": "rtb-0b5bf245d2867892b",
            "owner_id": "282683106297",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05e87b9b2c6eeef00",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "private-rtb",
              "Owner": "Kamesh",
              "Project": "VR"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-rtb",
              "Owner": "Kamesh",
              "Project": "VR"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b836eceaf037348"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_nat_gateway.natgw",
            "aws_subnet.public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e66166e05bad6f07",
            "route_table_id": "rtb-014112bcf9db318a3",
            "subnet_id": "subnet-082c11d3a9a81a786"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rtb",
            "aws_subnet.public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01927b9d6daaf07b3",
            "route_table_id": "rtb-014112bcf9db318a3",
            "subnet_id": "subnet-050ed84a206a68739"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rtb",
            "aws_subnet.public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0041423e731041651",
            "route_table_id": "rtb-0b5bf245d2867892b",
            "subnet_id": "subnet-0899f84fb6b40f026"
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_nat_gateway.natgw",
            "aws_route_table.rtb-private",
            "aws_subnet.private-1",
            "aws_subnet.public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f3af3b6282cb917",
            "route_table_id": "rtb-0b5bf245d2867892b",
            "subnet_id": "subnet-026622500668427ec"
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_nat_gateway.natgw",
            "aws_route_table.rtb-private",
            "aws_subnet.private-2",
            "aws_subnet.public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:282683106297:security-group/sg-0b9e2322cea325596",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b9e2322cea325596",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "282683106297",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "VR",
              "Owner": "Kamesh",
              "Project": "VR"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VR",
              "Owner": "Kamesh",
              "Project": "VR"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b836eceaf037348"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:282683106297:subnet/subnet-0899f84fb6b40f026",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0899f84fb6b40f026",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "282683106297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnet-1",
              "Owner": "Kamesh",
              "Project": "VR"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnet-1",
              "Owner": "Kamesh",
              "Project": "VR"
            },
            "vpc_id": "vpc-02b836eceaf037348"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:282683106297:subnet/subnet-026622500668427ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026622500668427ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "282683106297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnet-2",
              "Owner": "Kamesh",
              "Project": "VR"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnet-2",
              "Owner": "Kamesh",
              "Project": "VR"
            },
            "vpc_id": "vpc-02b836eceaf037348"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:282683106297:subnet/subnet-082c11d3a9a81a786",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082c11d3a9a81a786",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "282683106297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "pub-subnet-1",
              "Owner": "Kamesh",
              "Project": "VR"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "pub-subnet-1",
              "Owner": "Kamesh",
              "Project": "VR"
            },
            "vpc_id": "vpc-02b836eceaf037348"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:282683106297:subnet/subnet-050ed84a206a68739",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050ed84a206a68739",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "282683106297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "pub-subnet-2",
              "Owner": "Kamesh",
              "Project": "VR"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "pub-subnet-2",
              "Owner": "Kamesh",
              "Project": "VR"
            },
            "vpc_id": "vpc-02b836eceaf037348"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:282683106297:vpc/vpc-02b836eceaf037348",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00d2433adcaba6d82",
            "default_route_table_id": "rtb-02df87e0e9e982dff",
            "default_security_group_id": "sg-026e34d7ccdcb0fd6",
            "dhcp_options_id": "dopt-0cdacbc926325bc3b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02b836eceaf037348",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02df87e0e9e982dff",
            "owner_id": "282683106297",
            "tags": {
              "Environment": "dev",
              "Name": "VR",
              "Owner": "Kamesh",
              "Project": "VR"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VR",
              "Owner": "Kamesh",
              "Project": "VR"
            }
          }
        }
      ]
    }
  ]
}